<!--
  ~ Copyright 2013-2015 µg Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_submit">
        <CheckBoxPreference
            android:key="submit_data"
            android:title="@string/pref_title_submit_data"
            android:summary="@string/pref_description_submit_data"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="nickname"
            android:title="@string/pref_title_nickname"
            android:summary="@string/pref_description_nickname"
            android:defaultValue="" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_source">
        <CheckBoxPreference
            android:key="use_wifis"
            android:title="@string/pref_title_use_wifis"
            android:summary="@string/pref_description_use_wifis"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="use_cells"
            android:title="@string/pref_title_use_cells"
            android:summary="@string/pref_description_use_cells"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
